fixed wrong sized image, added filter option

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
 	padding-top:5vh;
 }
+.img-fluid {
+
+}
 
 .instaimg img {margin-bottom:30px;}
 .instaimg img:hover {
